# fuega-ai

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  .railwayignore  AGENT_AUDIT.md  CLAUDE.md  DATA_SCHEMA.md  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  Dockerfile.api  Dockerfile.frontend  FUEGA_OVERHAUL_PROMPT.md  GAMIFICATION.md  INJECTION.md  LAUNCH.md  PLAN_phase1_database.md  PROMPT.md  QA2.md  QA3.md  QAUI.md  README.md  SCOPE_AND_REQUIREMENTS.md  SCRUB.md  SECURITY.md  UI_DESIGN.md  alembic.ini  deploy.sh  docker-compose.yml  fuega_builder.py  middleware.ts  next.config.js  nginx-frontend.conf  nginx.conf  nixpacks.toml  package-lock.json  package.json  playwright.config.ts  pyproject.toml  railway.json  (+8 more)
.claude/: launch.json  settings.local.json
app/: globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
config/: agents.yaml  brand.yaml  budget.yaml  platforms.yaml  services.yaml  workflows.yaml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
lib/: feature-flags.ts  sanitize.ts  utils.ts
migrations/: 001_initial_schema.sql  002_rls_policies.sql  003_indexes.sql  004_seed_data.sql  006_badges_and_user_badges.sql  007_notifications.sql  008_referrals.sql  009_add_profile_fields.sql  009_cosmetics_and_user_cosmetics.sql  010_tips_and_user_updates.sql  010_update_notification_type_constraint.sql  011_rename_to_campfire_terminology.sql  012_governance_variables.sql  013_chat_messages.sql  014_reset_data.sql  015_chat_rooms.sql  016_fulltext_search.sql  017_campfire_customization.sql  018_missing_columns.sql  (+5 more)
(+493 files in other folders)
